--- a/CodeForAndroid/ActivityTest/app/src/main/res/layout/activity_2.xml
+++ b/CodeForAndroid/ActivityTest/app/src/main/res/layout/activity_2.xml
@@ -1,28 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity2">
 
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frg"
+        android:name="com.example.book.activitytest.FragmentTest1"/>
+    
     <LinearLayout
-        android:layout_width="395dp"
-        android:layout_height="715dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
-
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        style="?android:attr/buttonBarButtonStyle" >
         <Button
-            android:id="@+id/button1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
+            android:id="@+id/SwitchButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="切换按钮1"
+            android:layout_weight="1"/>
         <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:id="@+id/SwitchButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="切换按钮2"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/SwitchButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="切换按钮3"
+            android:layout_weight="1"/>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+
+
+</RelativeLayout>
