--- a/CodeForAndroid/ViewTest/app/src/main/res/anim/out_rightleft.xml
+++ b/CodeForAndroid/ViewTest/app/src/main/res/anim/out_rightleft.xml
@@ -3,7 +3,7 @@
 
     <translate
         android:duration="1000"
-        android:fromXDelta="-100%"
-        android:toXDelta="0"
+        android:fromXDelta="0"
+        android:toXDelta="-100%"
         />
 </set>
