--- a/AndroidJavaTest/APPCloneProject1/app/src/main/res/layout/title.xml
+++ b/AndroidJavaTest/APPCloneProject1/app/src/main/res/layout/title.xml
@@ -30,6 +30,6 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Menu"
+        android:text="登录"
         android:textSize="12sp" />
 </LinearLayout>
