--- a/CodeForAndroid/BroadcastTest/app/src/main/res/layout/activity_main.xml
+++ b/CodeForAndroid/BroadcastTest/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
+        android:id="@+id/text_net"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/text_battery"
         android:text="剩余电量"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <ProgressBar
         android:id="@+id/progressbar"
         style="?android:attr/progressBarStyleHorizontal"
 
-        android:max="100"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progressTint="@color/colorPrimaryDark" />
 
 </LinearLayout>
