--- a/CodeForAndroid/AlipayTest/app/src/main/res/layout/activity_main.xml
+++ b/CodeForAndroid/AlipayTest/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="Here To Type Price"
-        android:inputType="number" />
+        android:inputType="numberDecimal" />
     <Button
         android:id="@+id/payButton"
         android:layout_width="120dp"
