--- a/CodeForAndroid/ContactTest/app/src/main/res/layout/activity_main.xml
+++ b/CodeForAndroid/ContactTest/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     android:gravity="center"
     tools:context=".MainActivity">
 
+    <ImageButton
+        android:id="@+id/image1"
+        style="@android:style/Theme.DeviceDefault.Light.NoActionBar.TranslucentDecor"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_launcher" />
     <TextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
