--- a/KunkunReader/app/src/main/res/layout/activity_read.xml
+++ b/KunkunReader/app/src/main/res/layout/activity_read.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="#0099cc"
+    tools:context=".ReadActivity">
 
     <LinearLayout
+        android:id="@+id/Read_TopBar"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:background="@color/white"
-        android:layout_alignParentTop="true"
+        android:visibility="invisible"
+        android:enabled="false"
         >
 
         <Button
-            android:id="@+id/Main_leftBtn"
+            android:id="@+id/Read_back"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:background="@null"
-            android:text=""
-            android:textSize="18sp" />
+            android:text="&lt;  返回"
+            android:textSize="18sp"
+            />
 
         <TextView
-            android:id="@+id/Shop_Title"
+            android:id="@+id/Read_Title"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:layout_weight="1"
-            android:text="我的书架"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="19sp" />
         <Button
-            android:id="@+id/Shop_rightBtn"
+            android:id="@+id/Read_JumpTo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -41,19 +44,15 @@
             android:textSize="18sp" />
     </LinearLayout>
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/Read_ContentTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
-        <Button
-            android:id="@+id/Main_ToShop"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
-</>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:keepScreenOn="true"
+        android:text="@string/read_wait"
+        android:textColor="#33b5e5"
+        android:textSize="50sp"
+        android:textStyle="bold" />
+
+</FrameLayout>
