--- a/KunkunReader/app/src/main/res/values/colors.xml
+++ b/KunkunReader/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="black">#000000</color>
+    <color name="white">#EEEEEE</color>
+    <color name="green">#47f16c</color>
+    <color name="huibaise">#f3f4f0</color>
+    <color name="xiantiaose">#ece8e8</color>
+    <color name="jinmilan">#92a8d1</color>
+    <color name="blue">#66ccff</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
