--- a/KunkunReader/app/src/main/res/layout/activity_main.xml
+++ b/KunkunReader/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/Main_TopBar"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:gravity="center"
@@ -16,11 +17,11 @@
         >
 
         <Button
-            android:id="@+id/Main_leftBtn"
+            android:id="@+id/Main_AddLocal"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:background="@null"
-            android:text=""
+            android:text="添加本地"
             android:textSize="18sp" />
 
         <TextView
@@ -33,27 +34,97 @@
             android:textColor="@color/black"
             android:textSize="19sp" />
         <Button
-            android:id="@+id/Shop_rightBtn"
+            android:id="@+id/Main_Config"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:text=""
+            android:text="设置"
             android:textSize="18sp" />
     </LinearLayout>
 
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    />
+        android:orientation="horizontal"
+        android:rowCount="3"
+        android:columnCount="3"
+        android:paddingLeft="40dp"
+        android:layout_below="@+id/Main_TopBar">
+        <LinearLayout
+            android:id="@+id/data_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imgUrl"
+                android:layout_width="90dp"
+                android:layout_height="120dp"
+                android:scaleType="fitXY"
+                tools:background="@drawable/santi" />
+
+            <TextView
+                android:id="@+id/bookName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                tools:text="三体" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/add_btn"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/shape_main_add_bg"
+            android:scaleType="center"
+            android:src="@drawable/icon_main_add" />
+    </GridLayout>
 
     <LinearLayout
+        android:id="@+id/Main_BottomBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:background="@drawable/shape_top_line"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/Main_ToInfo"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawablePadding="3dp"
+            android:transitionName="icon"
+            android:drawableTop="@drawable/selector_mainradio_private_bg"
+            android:gravity="center"
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp"
+            android:text="个人中心"
+            android:background="@drawable/btn_bg_dottedline"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
         <Button
             android:id="@+id/Main_ToShop"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/selector_mainradio_market_bg"
+            android:gravity="center"
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp"
+            android:text="书城"
+            android:background="@drawable/btn_bg_dottedline"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
     </LinearLayout>
+
 </>
