--- a/KunkunReader/app/src/main/res/layout/activity_user.xml
+++ b/KunkunReader/app/src/main/res/layout/activity_user.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivity">
+    tools:context=".UserActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -40,5 +41,207 @@
             android:textSize="18sp"
              />
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/touxiang"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <ImageButton
+            android:id="@+id/Msg_touxiang_image"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/shape_corner"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/Msg_touxiang_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="30dp"
+            android:layout_toRightOf="@id/Msg_touxiang_image"
+            android:gravity="center"
+            android:text="用户名"
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/Msg_touxiang_image"
+            android:layout_below="@id/Msg_touxiang_text"
+            android:gravity="center">
+            <TextView
+                android:text="用户id："
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/Msg_touxiang_id"
+                android:text="12345678"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/sec"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+
+        >
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#ece8e8"
+            />
+        <TextView
+            android:id="@+id/xingbie1"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="1dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="性别："
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+        <TextView
+            android:id="@+id/Msg_xingbie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="女"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_toLeftOf="@id/sec_tag"
+            android:layout_centerVertical="true"
+            />
+        <TextView
+            android:id="@+id/sec_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="11dp"
+            android:layout_marginRight="11dp"
+            android:text="&lt;" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/number"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+
+        >
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#ece8e8"
+            />
+        <TextView
+            android:id="@+id/phonenumber1"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="1dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="手机号码："
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+        <TextView
+            android:id="@+id/Msg_phonenumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="123456789"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_toLeftOf="@id/phonenumber_tag"
+            android:layout_centerVertical="true"
+            />
+        <TextView
+            android:id="@+id/phonenumber_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="11dp"
+            android:layout_marginRight="11dp"
+            android:text="&lt;" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/address"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+
+        >
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#ece8e8"
+            />
+        <TextView
+            android:id="@+id/suozaidi1"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="1dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="所在地："
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+        <TextView
+            android:id="@+id/Msg_suozaidi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="湖南长沙"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_toLeftOf="@id/address_tag"
+            android:layout_centerVertical="true"
+            />
+        <TextView
+            android:id="@+id/address_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="11dp"
+            android:layout_marginRight="11dp"
+            android:text="&lt;" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/Msg_ChangePassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginRight="90dp"
+        android:background="@drawable/btn_bg_bule"
+        android:text="修改密码"
+        android:textColor="#FFFFFF"
+        android:textSize="25dp"/>
+    <Button
+        android:id="@+id/Msg_QuitLogin_Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginRight="90dp"
+        android:background="@drawable/btn_gb_red"
+        android:text="退出登录"
+        android:textColor="#FFFFFF"
+        android:textSize="25dp"/>
 
 </LinearLayout>
