--- a/KunkunReader/app/src/main/res/layout/activity_main.xml
+++ b/KunkunReader/app/src/main/res/layout/activity_main.xml
@@ -58,12 +58,14 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/imgUrl"
+                style="@android:style/Animation.Translucent"
                 android:layout_width="90dp"
                 android:layout_height="120dp"
-                android:scaleType="fitXY"
-                tools:background="@drawable/santi" />
+                android:background="santi"
+                android:scaleType="centerCrop"
+                android:src="@drawable/santi" />
 
             <TextView
                 android:id="@+id/bookName"
@@ -127,4 +129,4 @@
             android:textSize="15sp" />
     </LinearLayout>
 
-</>
+</RelativeLayout>
