--- a/KunkunReader/app/src/main/res/layout/activity_user.xml
+++ b/KunkunReader/app/src/main/res/layout/activity_user.xml
@@ -53,9 +53,10 @@
             android:layout_width="128dp"
             android:layout_height="128dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/shape_corner"
+            android:background="@drawable/headset"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            tools:src="@drawable/headset" />
 
         <TextView
             android:id="@+id/Msg_touxiang_text"
