--- a/KunkunReader/app/src/main/res/values/colors.xml
+++ b/KunkunReader/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
-    <color name="white">#EEEEEE</color>
+    <color name="white">#FFFFFF</color>
     <color name="green">#47f16c</color>
     <color name="huibaise">#f3f4f0</color>
     <color name="xiantiaose">#ece8e8</color>
